# woodall_serial

./: CMakeLists.txt
include/woodall_serial/: serial.h
include/woodall_serial/impl/: unix.h  win.h
src/: serial.cc
src/impl/: unix.cc  win.cc
src/impl/list_ports/: list_ports_linux.cc  list_ports_osx.cc  list_ports_win.cc
tests/: unix_serial_tests.cc
tests/unit/: unix_timer_tests.cc
